Add `cancel-task` endpoint
